<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_qr"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/qr_card_title"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@color/colorUltraLight"
        android:fontFamily="@font/sfbold"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/add_account_card"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qr_quantity_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfbold"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:text="@string/qr_quantity"
        android:textColor="@color/colorDarkGray"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_card_title" />

    <EditText
        android:id="@+id/qr_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfmedium"
        android:hint="@string/qr_quantity"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:theme="@style/EditTextLogin"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_quantity_title"/>

    <TextView
        android:id="@+id/qr_quantity_express"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/sfregular"
        android:text="@string/qr_quantity_review"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_quantity" />

    <TextView
        android:id="@+id/qr_products_title"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorUltraLight"
        android:fontFamily="@font/sfbold"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/qr_products"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_quantity_express" />

    <TextView
        android:id="@+id/qr_products_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfregular"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="24dp"
        android:text="@string/qr_with_products"
        android:textColor="@color/colorMediumBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_products_title" />

    <TextView
        android:id="@+id/qr_product_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        android:paddingBottom="12dp"
        android:paddingTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/qr_with_products_review"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qr_products_body" />

    <ImageButton
        android:id="@+id/qr_generate_product"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTransparent"
        android:contentDescription="@string/qr_with_products_review"
        android:src="@drawable/list"
        app:layout_constraintBottom_toBottomOf="@+id/qr_product_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/qr_products_body" />

    <Button
        android:id="@+id/qr_generate"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:text="@string/qr_generate"
        android:textColor="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>