<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:fillViewport="true"
        android:background="@color/colorWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/sfmedium"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/colorMediumBlack"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/content_description_splash"
                android:src="@drawable/splash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_title" />

            <TextView
                android:id="@+id/login_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/bbvamedium"
                android:text="@string/welcome_hi"
                android:textColor="@color/colorMediumBlack"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_image" />

            <TextView
                android:id="@+id/login_name_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sflight"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorMediumBlack"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_welcome" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_name_store">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/sfregular"
                    android:gravity="center"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:theme="@style/EditTextLogin" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="150dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sfbold"
                android:gravity="center"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorBlueSky"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_number_account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/login_forgot_password">

                <EditText
                    android:id="@+id/login_number_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/sfregular"
                    android:gravity="center"
                    android:hint="@string/login_number_account"
                    android:inputType="phone"
                    android:paddingEnd="16dp"
                    android:maxLength="10"
                    android:paddingStart="16dp"
                    android:textSize="16sp"
                    android:theme="@style/EditTextLogin" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/login_process_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sflight"
                android:gravity="center"
                android:text="@string/login_account_process"
                android:textColor="@color/colorMediumBlack"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_number_account_layout" />

            <TextView
                android:id="@+id/login_process_data"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sflight"
                android:gravity="center"
                android:text="@string/login_account_data"
                android:textColor="@color/colorMediumBlack"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_process_account" />

            <Button
                android:id="@+id/login_privacy"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorWhite"
                android:fontFamily="@font/sfbold"
                android:text="@string/login_privacy_policy"
                android:textAllCaps="true"
                android:textColor="@color/colorBlueSky"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_process_data" />

            <Button
                android:id="@+id/login_get_in"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:text="@string/login_get_in"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_account_next"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>