<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/purcharse_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/sfmedium"
            android:textColor="@color/colorDarkGray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/purcharse_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sfregular"
            android:textColor="@color/colorMediumBlack"
            android:textSize="12sp"
            android:text="@string/purcharse_transaction"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_name"
            app:layout_constraintStart_toStartOf="@+id/purcharse_name"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_name" />

        <TextView
            android:id="@+id/purcharse_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/purcharse_address"
            android:textColor="@color/colorMediumGray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_name"
            app:layout_constraintStart_toStartOf="@+id/purcharse_number"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_number" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/purcharse_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_address"
            app:layout_constraintStart_toStartOf="@+id/purcharse_address"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_address" />

        <TextView
            android:id="@+id/purcharse_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/purcharse_subtotal"
            android:textColor="@color/colorMediumGray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/purcharse_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_recycler_view" />

        <TextView
            android:id="@+id/purcharse_subtotal_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/sfregular"
            android:textColor="@color/colorMediumGray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_recycler_view" />

        <TextView
            android:id="@+id/purcharse_iva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/purcharse_iva"
            android:textColor="@color/colorMediumGray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/purcharse_subtotal"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_subtotal" />

        <TextView
            android:id="@+id/purcharse_iva_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sfregular"
            android:textColor="@color/colorMediumGray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_subtotal_amount"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_subtotal_amount" />

        <TextView
            android:id="@+id/purcharse_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/purcharse_products"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/purcharse_iva"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_iva" />

        <TextView
            android:id="@+id/purcharse_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sfregular"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_iva_amount"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_iva_amount" />

        <TextView
            android:id="@+id/purcharse_total_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sfbold"
            android:text="@string/purcharse_total"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/purcharse_product"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_product" />

        <TextView
            android:id="@+id/purcharse_total_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sfbold"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/purcharse_product_amount"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_product_amount" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="328dp"
            android:layout_height="328dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_only_gradient"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_total_product">

            <ImageView
                android:id="@+id/detail_qr_purcharse"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/content_description_card" />

        </LinearLayout>

        <TextView
            android:id="@+id/purcharse_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sfbold"
            android:text="@string/purcharse_thanks"
            android:textColor="@color/colorMediumGray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/purcharse_address_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/purcharse_tecnical_address"
            android:textColor="@color/colorDarkGray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_thanks" />

        <Button
            android:id="@+id/purcharse_share"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/purcharse_finalize"
            android:textColor="@color/colorWhite"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_address_service" />

        <Button
            android:id="@+id/purcharse_final"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/purcharse_finalize"
            android:textColor="@color/colorWhite"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purcharse_address_service" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>